# certpath

./: README.md  pyproject.toml
src/certpair/: __init__.py
tests/: test_find.py
